Responsive Issue on mobile [FIXED]

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
 
 .info {
     text-align: center;
-    width: 650px;
+    width: 80%;
     margin: 0px auto 0px auto;
 }
 
